# mimir-rgnn

./: .gitignore  CONTRIBUTING.md  README.md  copilot-instructions.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: mypy.yml  publish.yml  test.yml
pymimir_rgnn/: __init__.py  aggregations.py  bases.py  configs.py  decoders.py  encoders.py  encodings.py  encodings.py.bak  messages.py  model.py  modules.py  updates.py  utils.py
tests/: test_model.py  test_new_encoder_api.py
